# HexEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  Setup.bat  THIRD_PARTY_NOTICES.md  sbom.cyclonedx.json  setup.py  vcpkg.json
.github/workflows/: codeql.yml  dependency-report.yml  static-analysis.yml  unit-tests.yml  windows-modern-build.yml
Source/HexEngine/: HexEngine-modern.slnf  HexEngine.sln  plugins.manifest.example.json
Source/HexEngine/HexEngine.AssetPacker/: AssetPacker.cpp  AssetPacker.hpp  HexEngine.AssetPacker.vcxproj  HexEngine.AssetPacker.vcxproj.filters
Source/HexEngine/HexEngine.Core/: HexEngine.Core.vcxproj  HexEngine.Core.vcxproj.filters  HexEngine.Shaders.targets  HexEngine.hpp  Required.hpp
Source/HexEngine/HexEngine.Core/Audio/: AudioManager.cpp  AudioManager.hpp  SoundEffect.cpp  SoundEffect.hpp
Source/HexEngine/HexEngine.Core/Entity/: Entity.cpp  Entity.hpp  EntityId.hpp
Source/HexEngine/HexEngine.Core/Environment/: ClassRegistry.cpp  ClassRegistry.hpp  Game3DEnvironment.cpp  Game3DEnvironment.hpp  HeadlessEnvironment.cpp  HeadlessEnvironment.hpp  IEditorContext.hpp  IEnvironment.cpp  IEnvironment.hpp  IGameExtension.hpp  LogFile.cpp  LogFile.hpp  Profiler.cpp  Profiler.hpp  TimeManager.cpp  TimeManager.hpp
Source/HexEngine/HexEngine.Core/FileSystem/: AssetFile.cpp  AssetFile.hpp  AssetPackage.cpp  AssetPackage.hpp  AssetPackageManager.cpp  AssetPackageManager.hpp  BinaryReader.hpp  DiskFile.cpp  DiskFile.hpp  FileSystem.cpp  FileSystem.hpp  ICompressionProvider.hpp  IFile.hpp  IResource.cpp  IResource.hpp  IResourceLoader.hpp  JsonFile.hpp  KeyValues.cpp  KeyValues.hpp  MemoryFile.cpp  MemoryFile.hpp  PackageManifest.cpp  PackageManifest.hpp  PackageVerification.hpp  ParticleEffectLoader.cpp  ParticleEffectLoader.hpp  PrefabLoader.cpp  PrefabLoader.hpp  ProjectFile.cpp  ProjectFile.hpp  ResourceSystem.cpp  ResourceSystem.hpp  SceneSaveFile.cpp  SceneSaveFile.hpp  XmlFile.hpp
Source/HexEngine/HexEngine.Core/GUI/: DebugGUI.cpp  DebugGUI.hpp  DrawList.hpp  FontImporter.cpp  FontImporter.hpp  GuiRenderer.cpp  GuiRenderer.hpp  UIManager.cpp  UIManager.hpp
Source/HexEngine/HexEngine.Core/Graphics/: AtmosphereLUTs.cpp  AtmosphereLUTs.hpp  AutoExposure.cpp  AutoExposure.hpp  Bloom.cpp  Bloom.hpp  BlurEffect.cpp  BlurEffect.hpp  DebugRenderer.cpp  DebugRenderer.hpp  DiffuseGIAOProvider.cpp  DiffuseGIAOProvider.hpp  Formats.hpp  GBuffer.cpp  GBuffer.hpp  IConstantBuffer.hpp  IDenoiserProvider.hpp  IFontImporter.hpp  IFontResource.cpp  IFontResource.hpp  IGraphicsDevice.hpp  IIndexBuffer.hpp  IInputLayout.cpp  IInputLayout.hpp  INativeGraphicsResource.hpp  IParticleSystem.hpp  ISSAOProvider.hpp  IShader.cpp  IShader.hpp  IShaderStage.hpp  IStreamlineProvider.hpp  IStructuredBuffer.hpp  ITexture.hpp  ITexture2D.cpp  ITexture2D.hpp  ITexture3D.hpp  IVertexBuffer.hpp  IconService.cpp  IconService.hpp  LogWindowMessages.cpp  (+31 more)
Source/HexEngine/HexEngine.Core/Input/: CommandManager.cpp  CommandManager.hpp  Console.cpp  Console.hpp  HCommand.cpp  HCommand.hpp  HVar.cpp  HVar.hpp  IInputSystem.hpp  InputDevice.cpp  InputDevice.hpp  InputSystem.cpp  InputSystem.hpp  MouseInputDevice.cpp  MouseInputDevice.hpp  StandardCommands.cpp
Source/HexEngine/HexEngine.Core/Math/: Bezier.cpp  Bezier.hpp  FloatMath.cpp  FloatMath.hpp
Source/HexEngine/HexEngine.Core/Network/: INetworkSystem.hpp  IReplicated.hpp  IRpc.hpp  Net.hpp  (+1 more)
Source/HexEngine/HexEngine.Creator/: Creator.cpp  Creator.hpp  CreatorApp.hpp  HexEngine.Creator.vcxproj  HexEngine.Creator.vcxproj.filters  Main.cpp  Renderer.hpp  Window.cpp  Window.hpp
Source/HexEngine/HexEngine.Editor/: HexEngine.Editor.vcxproj  HexEngine.Editor.vcxproj.filters  HexEngineEditor.cpp  HexEngineEditor.h  RenderWidget.cpp  RenderWidget.h  RendererSettings.cpp  RendererSettings.hpp  main.cpp
Source/HexEngine/HexEngine.Editor2/: Editor.cpp  Editor.hpp  GameIntegrator.cpp  GameIntegrator.hpp  HexEngine.Editor2.vcxproj  HexEngine.Editor2.vcxproj.filters  WinMain.cpp
Source/HexEngine/HexEngine.Launcher/: HexEngine.Launcher.vcxproj  WinMain.cpp
Source/HexEngine/HexEngine.SampleGame/: Game.cpp  Game.hpp  GameMain.cpp  HexEngine.SampleGame.vcxproj  HexEngine.SampleGame.vcxproj.filters  Input.cpp  Input.hpp  PlayerController.cpp  PlayerController.hpp  PlayerInventory.hpp  PlayerMovement.cpp  PlayerMovement.hpp  SaveFile.cpp  SaveFile.hpp  resource.h
Source/HexEngine/HexEngine.ShaderCompiler/: HexEngine.ShaderCompiler.vcxproj  HexEngine.ShaderCompiler.vcxproj.filters  Main.cpp
Source/HexEngine/HexEngine.Shaders/: Atmosphere.shader  AtmosphereAerialPerspectiveApply.shader  AtmosphereAerialPerspectiveLUT.shader  AtmosphereCommon.shader  AtmosphereMultiScatteringLUT.shader  AtmospherePhysical.shader  AtmosphereSkyViewLUT.shader  AtmosphereTransmittanceLUT.shader  AutoExposureLuminance.shader  AutoPuddles.shader  BasicDenoise.shader  BilateralUpsample.shader  Billboard.shader  Bloom.shader  BloomPhysical.shader  BokehDoF.shader  BuildDepthPyramid.shader  BuildShadowMask.shader  ChromaticAbberation.shader  ColourGrade.shader  DebugCommon.shader  DebugRender.shader  Decal.shader  Default.shader  DefaultAnimated.shader  DefaultPixel.shader  Deferred.shader  DepthPrePass.shader  DiffuseGIAOBlur.shader  DiffuseGIAmbientOcclusion.shader  DiffuseGIBuildCandidates.shader  DiffuseGIClearVoxel.shader  DiffuseGIInjectEmitters.shader  DiffuseGIPropagateVoxel.shader  DiffuseGIResolve.shader  DiffuseGIShiftVoxel.shader  DiffuseGITrace.shader  DiffuseGIVoxelize.shader  DiffuseGIVoxelizeEval.shader  FXAA.shader  (+58 more)
Source/HexEngine/HexEngine.Tests/: HexEngine.Tests.vcxproj  TestMain.cpp
cmake/: HexCheckStreamlineArtifacts.cmake  HexDependencies.cmake  HexLegacyImportedTargets.cmake  HexToolchain.cmake
cmake/examples/: assimp_probe.cpp  brotli_probe.cpp  dep_probe.cpp  physx_probe.cpp  shaderconductor_probe.cpp  streamline_probe.cpp
docs/: MCP.md
docs/rendering/: gi-gpu-eval-tuning.md  gi-gpu-migration-plan.md  gpu-visibility-culling.md  material-graph-v1.md
(+656 files in other folders)
